# machine-learning

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake
_codeql_build_dir/src/: CTestTestfile.cmake  ml
_codeql_build_dir/src/base_model/: CTestTestfile.cmake
_codeql_build_dir/src/ensemble/: CTestTestfile.cmake
_codeql_build_dir/src/neural_network/: CTestTestfile.cmake  neural_network_test
_codeql_build_dir/src/tensor/: CTestTestfile.cmake  tensor_ops_test
_codeql_build_dir/src/utils/: CTestTestfile.cmake
docs/: CMakeLists.txt  Doxyfile
docs/source/: conf.py  decision_tree.md  decision_tree_classifier.md  index.md  overview.md  random_forest.md  random_forest_classifier.md  requirements.txt  utilities.md
docs/source/_static/: main_stylesheet.css
examples/: README.md  input_basic_example.json  input_lenet_v1.json
python/: mlp.py
src/: CMakeLists.txt  input.json  main.cpp  test_main.cpp
src/base_model/: CMakeLists.txt  base_model.cpp  base_model.h
src/computational_graph/: CMakeLists.txt  tensor.cpp  tensor.h  tensor_operations.h  tensor_operations_test.cpp  test.cpp
src/ensemble/: CMakeLists.txt  decision_tree.h  decision_tree_classifier.cpp  decision_tree_classifier.h  random_forest_classifier.cpp  random_forest_classifier.h
src/neural_network/: CMakeLists.txt  README.md  layer.h  neural_network.cpp  neural_network.h  neural_network_test.cpp  optimizer.h
src/tensor/: CMakeLists.txt  README.md  tensor.cpp  tensor.h  tensor_operations.h  tensor_operations_test.cpp  test.cpp
src/utils/: CMakeLists.txt  evaluate.cpp  logging.cpp  logging.h  misc.cpp  read_input.cpp  utils.cpp  utils.h
